# flac-picture

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  flac-picture.cabal  stack.yaml
.github/workflows/: ci.yaml
Codec/Audio/FLAC/Metadata/: Picture.hs
tests/Codec/Audio/FLAC/Metadata/: PictureSpec.hs
