cabal-version:   2.4
name:            flac-picture
version:         0.1.2
license:         BSD-3-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.10.7 ghc ==9.0.2 ghc ==9.2.1
homepage:        https://github.com/mrkkrp/flac-picture
bug-reports:     https://github.com/mrkkrp/flac-picture/issues
synopsis:
    Support for writing pictures into FLAC metadata blocks with JuicyPixels

description:
    Support for writing pictures into FLAC metadata blocks with JuicyPixels.

category:        Codec, Audio, Image
build-type:      Simple
data-files:
    audio-samples/*.flac
    picture-samples/*.jpeg
    picture-samples/*.png

extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/flac-picture.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Codec.Audio.FLAC.Metadata.Picture
    default-language: Haskell2010
    build-depends:
        JuicyPixels >=3.2.6.5 && <4.0,
        base >=4.13 && <5.0,
        bytestring >=0.2 && <0.12,
        flac >=0.1 && <0.3

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-tools:      hspec-discover >=2.0 && <3.0
    hs-source-dirs:   tests
    other-modules:    Codec.Audio.FLAC.Metadata.PictureSpec
    default-language: Haskell2010
    build-depends:
        JuicyPixels >=3.2.6.5 && <4.0,
        base >=4.13 && <5.0,
        bytestring >=0.2 && <0.12,
        directory >=1.2.2 && <1.4,
        flac >=0.1 && <0.3,
        flac-picture,
        hspec >=2.0 && <3.0,
        temporary >=1.1 && <1.4

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall
